# AIAutoProver

./: .dockerignore  .gitignore  AUTOPROVE.md  pyproject.toml
ai_autoprover/autosetup/: handler.py
ai_autoprover/cli/: console_autoprove.py  s3_autoprove.py  tui_autoprove.py
ai_autoprover/io/: results.py  settings.py  sources.py
scripts/: Dockerfile.autoprove  Dockerfile.cloud  Dockerfile.local  autoprove-entrypoint.sh  docker-compose.cloud.yml  docker-compose.local.yml  docker-compose.yml
